# auth-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE-NEXT-STEPS.md  CLAUDE-OVERVIEW.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  std-err
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a84ce95b74fa_initial_schema_all_tables.py  f04636a50ca2_add_name_to_users.py
app/: main.py  worker.py
app/api/: access.py  admin.py  auth.py  courses.py  credentials.py  dependencies.py  health.py  login.py  logout.py  metrics_endpoint.py  oauth.py  orgs.py  profile.py  progress.py  ratelimit.py  refresh.py  register.py  resource.py  users.py
app/core/: config.py  logging.py  metrics.py  slo.py
app/db/: engine.py  redis.py  tables.py
app/middleware/: metrics.py  request_context.py
app/models/: assessment.py  authorization_code.py  course.py  credential.py  oauth_client.py  organization.py  principal.py  progress.py  user.py
app/repos/: auth_code_repo.py  oauth_client_repo.py  org_membership_repo.py  org_repo.py  pg_auth_code_repo.py  pg_oauth_client_repo.py  pg_user_repo.py  user_repo.py
app/services/: auth_service.py  cache.py  pkce_service.py  rate_limiter.py  task_queue.py  token_blacklist.py  token_service.py  users_service.py
docker/: Dockerfile  README.md  alert-rules.yml  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: auth-service-slo.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docs/: JWT-hashing-selection.md  JWT-signing-algorithm-selection-2026.md  architecture.md  auth-design-notes-week3.md  auth-diagram.md  auth.md  cache-design.md  client-api.md  data-model-notes-week4.md  deployment-strategy.md  interview-scenarios-TODO.md  interview-scenarios-for-client-demo.md  job-alignment.md  logging-overview.md  oauth-overview.md  rate-limit-design.md  server-api-contract.md  slo-dashboard-guide.md  threat-model-tests.md  threat-model.md  week-by-week syllabus.txt  week-by-week-job-desc.txt  week07-SLOs.md  week4-data-modeling.md  week6-scalable-patterns.md
docs/archive/: week05-identity-access.md
docs/runbooks/: alert-runbooks.md  availability-slo-breach.md  latency-slo-breach.md  queue-processing-slo-breach.md
scripts/: demo_login_flow.py  load_test_rate_limit.py
tests/: README.md  conftest.py  test_main.py
tests/api/: test_auth.py  test_cache.py  test_courses.py  test_credentials.py  test_dependencies_org_scope.py  test_health.py  test_log_secrets.py  test_login.py  test_oauth_client.py  test_oauth_pkce_flow.py  test_oauth_pkce_flow_docker.py  test_org_rbac.py  test_ownership.py  test_progress.py  test_rate_limiting.py  test_rbac.py  test_refresh.py  test_routing.py  test_task_queue.py  test_tenant_isolation.py  test_token_blacklist.py  test_users.py
tests/core/: test_config.py  test_logging.py  test_slo.py  test_structured_logging.py
tests/middleware/: test_metrics.py  test_request_context.py
tests/services/: test_auth_service.py  test_users_service.py
