[build-system]
#  Required for editable installs and CI builds (PEP 517)
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-services"
version = "0.1.0"
requires-python = ">3.12"
dependencies = [
    "fastapi[standard]",
    "httpx",
    "python-multipart",
    "uvicorn[standard]",
]

[project.optional-dependencies]
# Tooling only: not included in production runtime images
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
# Explicit package list to avoid setuptools guessing in flat layout
where = ["."]
include = ["app", "api", "core", "services"]
exclude = ["tests", "docker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]

[tool.ruff]
line-length = 88
