[build-system]
#  Required for editable installs and CI builds (PEP 517)
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication-Authorization-Auditing Docker Service"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "tiffden" }
]

# fastapi[standard] is bigger than just fastapi, uvicorn, httpx
dependencies = [
    "fastapi[standard]",
    "httpx",
    "python-multipart",
    "uvicorn[standard]",
]

[project.optional-dependencies]
# Tooling only: not included in production runtime images
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

# =========================
# Tooling (Layer 2)
# =========================
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = []
# Strict:  select = ["E", "F", "I", "B", "UP"]
# Lenient: select = ["E", "F", "I"]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# addopts = ["--import-mode=prepend"]

# =========================
# Common package structure: src/
# =========================
# package-dir = {"" = "src"}
# where = ["src"]

# =========================
# OR Explicit package list to avoid setuptools guessing in flat layout
# =========================
[tool.setuptools.packages.find]
where = ["."]
include = ["app*",]
exclude = ["tests", "docker"]
